--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Idle Hands Massage Therapy" />
+    <meta
+      property="og:description"
+      content="Professional massage therapy services"
+    />
+    <meta
+      property="og:image"
+      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands1200x630px.png"
+    />
+    <meta property="og:url" content="https://idlehandsmassagetherapy.co.uk" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands1200x630px.png"
+    />
     <title>idle hands massage therapy</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link
@@ -10,6 +26,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div>
       <img
         src="images/idle_hands_hero_2.png"
@@ -18,8 +36,7 @@
         style="width: 100%; max-height: 800px; object-fit: cover"
       />
     </div>
-  </head>
-  <body>
+
     <!-- Header / Hero -->
     <div id="header"></div>
 
@@ -86,15 +103,15 @@
       </div>
       <div class="col-md-12" style="padding: 50px">
         <p>
-          <b>Hi, i’m Lynn. </b>My background is rooted in movement, collaboration
-          and craft - I’ve spent my career using my hands and working closely
-          with people who do the same. Massage was a natural progression: a
-          slower, more grounded way to stay connected to the body and how we live
-          in it. I understand the physical demands of modern life - the
-          repetition, the intensity, the need for recovery and care. With idle
-          hands, I offer massage searching for a moment to transcend. It’s
-          responsive, down to earth body work, designed to meet you where you
-          are and take you by the hand.
+          <b>Hi, i’m Lynn. </b>My background is rooted in movement,
+          collaboration and craft - I’ve spent my career using my hands and
+          working closely with people who do the same. Massage was a natural
+          progression: a slower, more grounded way to stay connected to the body
+          and how we live in it. I understand the physical demands of modern
+          life - the repetition, the intensity, the need for recovery and care.
+          With idle hands, I offer massage searching for a moment to transcend.
+          It’s responsive, down to earth body work, designed to meet you where
+          you are and take you by the hand.
         </p>
       </div>
       <section class="container my-5" id="instagram-gallery">
@@ -185,7 +202,6 @@
               <strong>Massage Studio</strong><br />
               Tuscany Wharf<br />
               4A Orsman Rd, London N1 5QJ <br />
-              
             </p>
             <!-- Google Maps Embed - Location 1 -->
             <div class="ratio ratio-16x9">
