--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
           </p>
         </div>
       </div>
+      <div class="nav nav-pills justify-content-center">
+          <a
+            id="book-link"
+            href="#"
+            class="nav-link active book-link"
+            aria-current="page"
+            style="font-size: 2rem; padding: 1rem 3rem; margin: 50px"
+          >
+            book now
+          </a>
+        </div>
 
       <div class="row align-items-center">
         <div class="text-center">
